# haki-ya-kazi-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
src/haki_ya_kazi_mcp/: __init__.py  server.py
