[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haki-ya-kazi-mcp"
version = "0.1.0"
description = "MCP server for Kenya labour rights — minimum wages, dismissal guidance, maternit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
haki-ya-kazi-mcp = "haki_ya_kazi_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
